# sdjwt

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sample.ipynb  sample.py
notebooks/sd-jwt/: holder_verifier_scenarios.ipynb  issuer_holder_scenarios.ipynb  sd_jwt.ipynb
notebooks/sd-jwt/.ipynb_checkpoints/: sd_jwt-checkpoint.ipynb
sdjwt/: adapter.py  didkey.py  pex.py  sdjwt.py
sdjwt/tests/: test_adapter.py  test_pex.py  test_sdjwt.py
