[tool.poetry]
name = "ewc"
version = "0.1.0"
description = ""
authors = ["George J Padayatti <george.padayatti@igrant.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
ebsi-wallet = "0.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
