[tool.poetry]
name = "sdjwt"
version = "2024.8.2"
description = ""
authors = ["George J Padayatti <george.padayatti@igrant.io>"]
readme = "README.md"
packages = [
    { include = "sdjwt" },
]


[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
eudi-wallet = "0.0.1"
jwcrypto = "^1.5.0"
pytz = "^2024.1"
jsonpath-ng = "^1.6.1"
pydantic = "^2.7.1"
jsonschema = "^4.21.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
